--- a/src/main/scala/Battleships/fx/welcome.fxml
+++ b/src/main/scala/Battleships/fx/welcome.fxml
@@ -125,5 +125,156 @@
                 </GridPane>
             </children>
         </AnchorPane>
+      <AnchorPane fx:id="gameStart" prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <Label fx:id="turnLabel" alignment="CENTER" layoutX="-66.0" layoutY="7.0" prefHeight="45.0" prefWidth="581.0" text="PLAYER 1">
+               <font>
+                  <Font size="25.0" />
+               </font>
+            </Label>
+            <GridPane fx:id="player2_Grid" layoutX="147.0" layoutY="227.0" onMouseClicked="#getcord" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="80.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="6" />
+               </children>
+            </GridPane>
+            <GridPane fx:id="player1_Grid" layoutX="147.0" layoutY="227.0" onMouseClicked="#getcord" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="80.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="3" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="5" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="6" />
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
     </children>
 </AnchorPane>
