--- a/src/main/scala/Battleships/fx/welcome.fxml
+++ b/src/main/scala/Battleships/fx/welcome.fxml
@@ -132,7 +132,7 @@
                   <Font size="25.0" />
                </font>
             </Label>
-            <GridPane fx:id="player2_Grid" layoutX="147.0" layoutY="227.0" onMouseClicked="#shootGrid" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="80.0">
+            <GridPane fx:id="player2_Grid" layoutX="147.0" layoutY="227.0" onMouseClicked="#shootGridP2" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="80.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -203,7 +203,7 @@
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane-blue" GridPane.columnIndex="6" GridPane.rowIndex="6" />
                </children>
             </GridPane>
-            <GridPane fx:id="player1_Grid" layoutX="147.0" layoutY="227.0" onMouseClicked="#shootGrid" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="80.0">
+            <GridPane fx:id="player1_Grid" layoutX="147.0" layoutY="227.0" onMouseClicked="#shootGridP1" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="80.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
