kA wsl bissl was verkehrt beim turnswitch wincondition geht net wie lösen? -nachdenken wann wer dran is :D
------BUGFIXES---------
-Fenster is jz net mehr kann man jz net mehr rezisen
-Winconditions gehen
-Mehr Error Proof Player Setup
-Playernames sind nicht mehr hardcoded
-Playernames im game integriert

TODO:
-wenn gewollt könnma größe dynamisch anpassen. ACHTUNG:Auf Hardcoded Parameter aufpassen sonst fliegt uns der Scheiß um die Ohren
-sich nicht ändernde parameter von var -> val für Leistung und schönheit
->!!!!!!überlappende Schiffe beim Setup!!!!!!!!
-TurnSwitches mit schwarzem Pane überlagern damit nicht so verwirrend bei linkslick dann ausblenden
-restartgame (nen button einfügen mit dem man einfach beim startscreen reinkommt) dafür müssen ALLE methoden wo die children gecleared werden geändert werden alle vars müssen genullt werden sprich 30tausen variablen müssen gesetzt werden, die gridpanes mit ner while i schleife wieder blau ausgemalt werden.
-GRÖßERES ALLE PRINTLN METHODEN IN EIN KLEINES CHATFENSTER PACKEN . BEI SETUP EINS DANACH FÜR JEDEN SPIELER EINS damit weniger arbeit

--- a/src/main/scala/Battleships/fx/welcome.fxml
+++ b/src/main/scala/Battleships/fx/welcome.fxml
@@ -278,5 +278,10 @@
             </GridPane>
          </children>
       </AnchorPane>
+      <AnchorPane fx:id="blenderAnch" prefHeight="400.0" prefWidth="600.0" styleClass="pane-blender">
+         <children>
+            <Pane fx:id="blender" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children>
+      </AnchorPane>
     </children>
 </AnchorPane>
